pyramid_layout changelog
========================

0.8 (2013-08-31)
----------------

- Added configure.zcml file to top-level package for easier inclusion in client
  ZCML configurations.

- Switched from `Configurator.with_context` method, which was removed from
  Pyramid in 1.3 release, to `pyramid_zcml.with_context`.  This change
  introduces new dependency - pyramid_zcml.

- Fixed Python 3.1 and 3.2 support in `zcml` module by removing unicode
  literals.

- It is now possible to use panels without a layout.

- It is now possible to provide a context other than the current request's 
  context to a panel.

0.7 (2012-02-06)
----------------

- Allow views for which no layout is found to function.

0.6 (2012-12-26)
----------------

- Fixed bug where class panels couldn't have args.

- Added error handling for the case where a BeforeRender event is not preceded
  by a ContextFound event.  This can happen in the case where an error occurs
  before a context is found and then a renderer is called by an error handler,
  as would be the case using pyramid_debugtoolbar.  In this case there will be
  no layout_manager, since the layout manager depends on the context.

- Removed Sphinx as an installation dependency.  It is still required by the
  'docs' extra.

0.5 (2012-10-23)
----------------

- Added a layout predicate to allow selection of a named layout declaratively
  when using Pyramid >= 1.4.

0.4 (2012-08-21)
----------------

- Changed name from pyramid_bottlecap to pyramid_layout.

- Completed documentation and unit tests.

0.3 (2012-04-19)
----------------

- Removed Popper layout.

- Various minor improvements.


0.2 (2012-01-04)
----------------

- initial release